--- a/ctouch_standard/ctouch_option.html
+++ b/ctouch_standard/ctouch_option.html
@@ -7,7 +7,7 @@
 <img src="icon32.png"> cTouch r2 (standard)<br>
 <form id="ctouch" action="#">
 <label>User-Agent List (sortable):</label><br>
-<table border="1" cellspacing="0" cellpadding="0" style="width:95%">
+<table border="1" style="width:100%;border-collapse:collapse;">
 <tbody id="UA"></tbody>
 </table>
 <input type="button" value="Add" id="ADD">
@@ -15,7 +15,7 @@
 <input type="button" value="Reset" id="RESET">
 <br>
 <label>Backup:</label><br>
-<textarea style="width:95%" rows="15" id="BACKUP"></textarea>
+<textarea style="width:100%;resize:vertical;" rows="15" id="BACKUP"></textarea>
 <br>
 <input type="button" value="Resurrection" id="RESURRECT">
 </form>
