--- a/ctouch_standard/ctouch_popup.html
+++ b/ctouch_standard/ctouch_popup.html
@@ -8,7 +8,7 @@
 <input type="button" id="link" value="Option Page"><br>
 <input type="checkbox" id="enable_imitation"><label for="enable_imitation">imitation? (ignored if UA unmodified)</label><br>
 <label>User-Agent</label><br>
-<table border="1" cellspacing="0" cellpadding="0">
+<table border="1" style="border-collapse:collapse;">
 <tbody id="UA"></tbody>
 </table>
 </form>
