--- a/ctouch_external/ctouch_option.html
+++ b/ctouch_external/ctouch_option.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="jqueryui-sortable.js"></script>
 <script type="text/javascript" src="ctouch_option.js"></script>
 </head><body>
-<img src="icon32.png"> cTouch r2 (external)<br>
+<img src="icon32.png" id="popup_page" alt="Angelic"> <span id="extensions_page">cTouch r2 (external)</span><br>
 <form id="ctouch" action="#">
 <label>User-Agent List (sortable):</label><br>
 <table border="1" style="width:100%;border-collapse:collapse;">
