--- a/ctouch_external/ctouch_popup.html
+++ b/ctouch_external/ctouch_popup.html
@@ -3,9 +3,9 @@
 <title>cTouch r2 (external)</title>
 <script type="text/javascript" src="ctouch_popup.js"></script>
 </head><body>
-<img src="icon32.png"> cTouch r2 (external)<br>
+<img src="icon32.png" id="popup_page" alt="Angelic"> <span id="extensions_page">cTouch r2 (external)</span><br>
 <form id="ctouch" action="#">
-<input type="button" id="link" value="Option Page"><br>
+<input type="button" id="option_page" value="Option Page"><br>
 <input type="checkbox" id="enable_imitation"><label for="enable_imitation">imitation? (ignored if UA unmodified)</label><br>
 <label>User-Agent</label><br>
 <table border="1" style="border-collapse:collapse;">
