--- a/ctouch_common2/ctouch_option.html
+++ b/ctouch_common2/ctouch_option.html
@@ -2,11 +2,12 @@
 <meta charset="UTF-8">
 <title id="title"></title>
 <script type="text/javascript" src="jqueryui-sortable.js"></script>
+<script type="text/javascript" src="ctouch_saveconfig.js"></script>
 <script type="text/javascript" src="ctouch_option.js"></script>
 </head><body>
 <img src="icon32.png" id="popup_page" alt="Angelic"> <span id="extensions_page"></span><br>
 <form id="ctouch" action="#">
-<input type="button" id="plugins_page" value="Plugin Page"> <span id="flash_state"></span><br>
+<input type="button" id="plugins_page" value="Plugins Page"> <span id="flash_state"></span><br>
 <label>User-Agent List (sortable):</label><br>
 <table border="1" style="width:100%;border-collapse:collapse;">
 <tbody id="UA"></tbody>
