--- a/ctouch_common2/ctouch_popup.html
+++ b/ctouch_common2/ctouch_popup.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
 <title id="title"></title>
+<script type="text/javascript" src="ctouch_saveconfig.js"></script>
 <script type="text/javascript" src="ctouch_popup.js"></script>
 </head><body>
 <img src="icon32.png" id="popup_page" alt="Angelic"> <span id="extensions_page"></span><br>
 <form id="ctouch" action="#">
-<input type="button" id="option_page" value="Option Page"> <input type="button" id="plugins_page" value="Plugin Page"><br>
+<input type="button" id="option_page" value="Option Page"> <input type="button" id="plugins_page" value="Plugins Page"><br>
 <span id="flash_state"></span><br>
 <span id="span"></span>
 <input type="checkbox" id="enable_imitation"><label for="enable_imitation">imitation? (ignored if UA unmodified)</label><br>
