Added a new option to disable generating touch events.

--- a/ctouch_common2/ctouch_popup.html
+++ b/ctouch_common2/ctouch_popup.html
@@ -10,6 +10,7 @@
 <span id="flash_state"></span><br>
 <span id="span"></span>
 <input type="checkbox" id="enable_imitation"><label for="enable_imitation">imitation? (ignored if UA unmodified)</label><br>
+<input type="checkbox" id="generate_touch"><label for="generate_touch">generate touch? (ignored if UA unmodified)</label><br>
 <label>User-Agent</label><br>
 <table border="1" style="border-collapse:collapse;">
 <tbody id="UA"></tbody>
