--- a/ctouch_common2/ctouch_popup.html
+++ b/ctouch_common2/ctouch_popup.html
@@ -8,6 +8,7 @@
 <form id="ctouch" action="#">
 <input type="button" id="option_page" value="Option Page"> <input type="button" id="plugins_page" value="Plugins Page"><br>
 <span id="flash_state"></span><br>
+<span id="external_daemon"></span>
 <span id="span"></span>
 <input type="checkbox" id="enable_imitation"><label for="enable_imitation">imitation? (ignored if UA unmodified)</label><br>
 <input type="checkbox" id="generate_touch"><label for="generate_touch">generate touch? (ignored if UA unmodified)</label><br>
