added download ctouch_ualist.json

--- a/ctouch_common2/ctouch_option.html
+++ b/ctouch_common2/ctouch_option.html
@@ -16,9 +16,11 @@
 <input type="button" value="Save" id="SAVE">
 <input type="button" value="Reset" id="RESET">
 <br>
-<label>Backup:</label><br>
+<label>Backup (Resurrection Spell/ふっかつのじゅもん):</label><br>
 <textarea style="width:100%;resize:vertical;" rows="15" id="BACKUP"></textarea>
 <br>
-<input type="button" value="Resurrection" id="RESURRECT">
+<input type="button" value="Resurrection" id="RESURRECT"><br>
+<input type="button" value="Download latest ctouch_ualist.json" id="DLUALIST"><br>
+After downloading, you should see the textbox is changed. Then you can use it as resurrection spell.<br>
 </form>
 </body></html>
