--- a/ctouch_firefox/data/ctouch_option.html
+++ b/ctouch_firefox/data/ctouch_option.html
@@ -17,7 +17,7 @@
 <textarea style="width:100%;resize:vertical;" rows="15" id="BACKUP"></textarea>
 <br>
 <input type="button" value="Resurrection" id="RESURRECT"><br>
-<input type="button" value="Download latest ctouch_ualist.json" id="DLUALIST"><br>
-After downloading, you should see the textbox is changed. Then you can use it as resurrection spell.<br>
+<input type="button" value="Show latest ctouch_ualist.json" id="DLUALIST"><br>
+Copy and paste the opened window's json.<br>
 </form>
 </body></html>
