Changed several stuff for cTouch (true)

--- a/ctouch_common2/ctouch_option.html
+++ b/ctouch_common2/ctouch_option.html
@@ -12,7 +12,8 @@
 <table border="1" style="width:100%;border-collapse:collapse;">
 <tbody id="UA"></tbody>
 </table>
-<input type="button" value="Add" id="ADD">
+<input type="button" value="Unset UA (Save to take effect)" id="UNSET">
+<input type="button" value="Add row" id="ADD">
 <input type="button" value="Save" id="SAVE">
 <input type="button" value="Reset" id="RESET">
 <br>
